# astro-toolbox

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  README.rst  REQUIREMENTS  pyproject.toml  setup.cfg
astro_toolbox/: __init__.py  angle.py  convert.py  coodinates.py  location.py  time.py
astro_toolbox/angle/: angle.py  angle_deg.py  angle_dms.py  angle_hms.py  angle_rad.py  hms.py  radians.py
astro_toolbox/coordinates/: equatorial.py  horizontal.py
astro_toolbox/location/: location.py
astro_toolbox/time/: time.py
astrotool/: convert.py  location.py
doc/source/: api.rst  conf.py
docs/: astro_toolbox.query.rst  astro_toolbox.rst  index.rst  modules.rst  requirements.txt
docs/source/: api.rst  astro_toolbox.angle.degrees.rst  astro_toolbox.angle.dms.rst  astro_toolbox.angle.hms.rst  astro_toolbox.angle.radians.rst  astro_toolbox.angle.rst  astro_toolbox.command_line.rst  astro_toolbox.coordinates.equatorial.rst  astro_toolbox.coordinates.horizontal.rst  astro_toolbox.coordinates.location.rst  astro_toolbox.coordinates.rst  astro_toolbox.coordinates.solar_system.rst  astro_toolbox.query.catalogs.rst  astro_toolbox.query.ephemeris.rst  astro_toolbox.query.rst  astro_toolbox.rst  astro_toolbox.scripts.planning.rst  astro_toolbox.scripts.plots.rst  astro_toolbox.scripts.rst  astro_toolbox.time.core.rst  astro_toolbox.time.rst  conf.py  index.rst  modules.rst
src/astro_toolbox/: __init__.py  __main__.py  catalog.py  command_line.py  location.py  time.py  utils.py
src/astro_toolbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/astro_toolbox/angle/: degrees.py  dms.py  hms.py  radians.py
src/astro_toolbox/angle/tests/: test_angle.py
src/astro_toolbox/coordinates/: equatorial.py  horizontal.py  location.py  solar_system.py
src/astro_toolbox/coordinates/data/: orbital_elements.json  sites.json
src/astro_toolbox/coordinates/tests/: test_equatorial.py  test_solar_system.py
src/astro_toolbox/gui/: gui.py  main.ui
src/astro_toolbox/query/: catalogs.py  ephemeris.py  weather.py
src/astro_toolbox/scripts/: planning.py  plots.py
src/astro_toolbox/time/: core.py
src/astro_toolbox/time/tests/: test_time.py
src/astro_toolbox/utils/: python_functions.py  strparser.py
