[metadata]
name = astro_toolbox
description = toolbox for observationnal astronomy
long_description = file: README.rst
long_description_content_type = text/x-rst
url = text
author = Romain Loustalet Palengat
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
keywords = astro, toolbox, astro_toolbox, observationnal,
project_urls =
    Source=https://github.com/rloustalet/astro_toolbox

[options]
packages =
    astro_toolbox
    astro_toolbox.angle
    astro_toolbox.coordinates
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    astro_toolbox=astro_toolbox.__main__:main