[metadata]
name = astro_toolbox
description = Toolbox for observationnal astronomy
long_description = file:README.rst
long_description_content_type = text/markdown
url = https://github.com/rloustalet/astro_toolbox
author = Romain Loustalet Palengat
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
keywords = astro, toolbox, astro_toolbox, observationnal,
project_urls =
    Source=https://github.com/rloustalet/astro_toolbox

[options]
packages =
    astro_toolbox
    astro_toolbox.angle
    astro_toolbox.coordinates
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    astro_toolbox=astro_toolbox.__main__:main