[metadata]
name = astro_toolbox
description = Toolbox for observationnal astronomy
version = attr: astro_toolbox.__init__.__version__
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/rloustalet/astro_toolbox
author = Romain Loustalet Palengat
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries

keywords = astro, toolbox, astro_toolbox, observationnal,
project_urls =
    Source=https://github.com/rloustalet/astro_toolbox
    Documentation=https://astro-toolbox.readthedocs.io/en/latest/

[options]
packages = 
        astro_toolbox
        astro_toolbox.angle
        astro_toolbox.coordinates
        astro_toolbox.query
        astro_toolbox.time
        astro_toolbox.scripts
        astro_toolbox.utils

python_requires = >=3.10
package_dir =
    =src
zip_safe = no
install_requires = file:REQUIREMENTS

[options.package_data]
astro_toolbox.coordinates = data/sites.json, data/orbital_elements.json

[options.entry_points]
console_scripts =
    astro_toolbox=astro_toolbox.__main__:main

[options.extras_require]
test = pytest
doc = sphinx; sphinx-rtd-theme